--- a/raspi/webservice/templates/index.html
+++ b/raspi/webservice/templates/index.html
@@ -6,11 +6,18 @@
 			  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
 			  crossorigin="anonymous"></script>
         <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+        <script src="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.js"></script>
         <script src="{{ url_for('static', filename='script.js') }}" type="text/javascript"></script>
+
+        <link rel="stylesheet" href="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.css" />
     </head>
 
     <body>
         <h1>Trogdor</h1>
+
+        <div id="map" style="height: 600px;">
+
+        </div>
 
         <div id="log">
 
