--- a/raspi/webservice/templates/index.html
+++ b/raspi/webservice/templates/index.html
@@ -15,11 +15,13 @@
     <body>
         <h1>Trogdor</h1>
 
-        <div id="map" style="height: 600px;">
+        <div id="map" style="height: 600px; width: 800px;">
 
         </div>
 
         <h2 id="coords"></h2>
+
+        <h2 id="satellites"></h2>
 
     </body>
 </html>
