--- a/raspi/webservice/templates/index.html
+++ b/raspi/webservice/templates/index.html
@@ -15,15 +15,17 @@
     <body>
         <h1>Trogdor</h1>
 
-        <div id="map" style="height: 600px; width: 800px;">
+        <div id="map" style="height: 400px; width: 600px; float: left;"></div>
 
+        <div style="float: left; padding-left:10px;">
+            <h3>GPS Data</h2>
+            <div id="coords"></div>
+            <div id="speed"></div>
+            <div id="fix"></div>
+            <div id="altitude"></div>
+            <div id="time"></div>
+            <div id="satellites"></div>
         </div>
-
-        <h2 id="coords"></h2>
-
-        <h2 id="time"></h2>
-
-        <h2 id="satellites"></h2>
 
     </body>
 </html>
