--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 			  crossorigin="anonymous"></script>
         <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
         <script src="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.js"></script>
+        <script src="{{ url_for('static', filename='lib/leaflet.rotatedMarker.js') }}"></script>
         <script src="{{ url_for('static', filename='script.js') }}" type="text/javascript"></script>
 
         <link rel="stylesheet" href="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.css" />
@@ -14,6 +15,8 @@
 
     <body>
         <h1>Trogdor</h1>
+
+
 
         <div id="map" style="height: 400px; width: 600px; float: left;"></div>
 
@@ -25,6 +28,10 @@
             <div id="altitude"></div>
             <div id="time"></div>
             <div id="satellites"></div>
+
+            <h3>Robot Data</h3>
+            <div id="motor"></div>
+            <div id="compass"></div>
         </div>
 
     </body>
