Two way communication between Raspberry Pi and Arduino, and basic control from the web UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,21 +17,28 @@
         <h1>Trogdor</h1>
 
 
+        <div style="width: 100%; float: left;">
+            <div id="map" style="height: 400px; width: 600px; float: left;"></div>
 
-        <div id="map" style="height: 400px; width: 600px; float: left;"></div>
+            <div style="float: left; padding-left:10px;">
+                <h3>GPS Data</h2>
+                <div id="coords"></div>
+                <div id="speed"></div>
+                <div id="fix"></div>
+                <div id="altitude"></div>
+                <div id="time"></div>
+                <div id="satellites"></div>
 
-        <div style="float: left; padding-left:10px;">
-            <h3>GPS Data</h2>
-            <div id="coords"></div>
-            <div id="speed"></div>
-            <div id="fix"></div>
-            <div id="altitude"></div>
-            <div id="time"></div>
-            <div id="satellites"></div>
+                <h3>Robot Data</h3>
+                <div id="motor"></div>
+                <div id="compass"></div>
+            </div>
+        </div>
 
-            <h3>Robot Data</h3>
-            <div id="motor"></div>
-            <div id="compass"></div>
+        <div style="width: 100%; float: left;">
+            <h3>Controls</h3>
+            <button id="go" value="Go!">Go</button>
+            <button id="stop" value="Stop!">Stop</button>
         </div>
 
     </body>
