--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Trogdor</title>
+        <title>Trogdor Control Panel</title>
         <script
 			  src="https://code.jquery.com/jquery-2.2.4.min.js"
 			  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -11,31 +11,34 @@
         <script src="{{ url_for('static', filename='script.js') }}" type="text/javascript"></script>
 
         <link rel="stylesheet" href="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.css" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
     </head>
 
     <body>
-        <h1>Trogdor</h1>
 
-
-        <div style="width: 100%; float: left;">
-            <div id="map" style="height: 400px; width: 600px; float: left;"></div>
-
-            <div style="float: left; padding-left:10px;">
-                <h3>GPS Data</h2>
-                <div id="coords"></div>
-                <div id="speed"></div>
-                <div id="fix"></div>
-                <div id="altitude"></div>
-                <div id="time"></div>
-                <div id="satellites"></div>
-
-                <h3>Robot Data</h3>
-                <div id="motor"></div>
-                <div id="compass"></div>
+        <div class="navbar">
+            <div class="title">
+                <h2>TROGDOR</h2>
             </div>
+            <div id="time"></div>
         </div>
 
-        <div style="width: 100%; float: left;">
+        <div id="map"></div>
+
+        <div>
+            <h3>Location</h2>
+            <div id="coords"></div>
+            <div id="compass"></div>
+            <div id="altitude"></div>
+        </div>
+
+        <div>
+            <h3>Movement</h3>
+            <div id="motor"></div>
+            <div id="speed"></div>
+        </div>
+
+        <div>
             <h3>Controls</h3>
             <button id="go" value="Go!">Go</button>
             <button id="stop" value="Stop!">Stop</button>
